Alteração de Títulos

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,8 +1,8 @@
 <div class="jumbotron">
-  <h1 class="display-4">Bem vindo ao Blog do Node</h1>
+  <h1 class="display-4">Blog Contação de Histórias</h1>
   <p class="lead">Este é um BLOG simples, desenvolvido com NodeJS + Express + MongoDB.</p>
   <hr class="my-4">
-  <p>Aqui você pode ler sobre novidades do mundo da computação</p>
+  <p>Aqui você pode ler histórias contadas por outras pessoas...</p>
   <p class="lead">
     <a class="btn btn-primary btn-lg" href="/usuarios/registro" role="button">Crie uma conta</a>
   </p>
